@@ -1,6 +1,6 @@
 1 VERSIONINFO
-FILEVERSION     0,5,0,0
-PRODUCTVERSION  0,5,0,0
+FILEVERSION     0,7,0,0
+PRODUCTVERSION  0,7,0,0
 BEGIN
   BLOCK "StringFileInfo"
   BEGIN
@@ -8,12 +8,12 @@ BEGIN
     BEGIN
       VALUE "Nikita Kindt", "Nikita Kindt"
       VALUE "FileDescription", "PixelDbg"
-      VALUE "FileVersion", "0.5"
+      VALUE "FileVersion", "0.7"
       VALUE "InternalName", "PixelDbg"
       VALUE "LegalCopyright", "Nikita Kindt"
       VALUE "OriginalFilename", "PixelDbg.exe"
       VALUE "ProductName", "PixelDbg"
-      VALUE "ProductVersion", "0.5"
+      VALUE "ProductVersion", "0.7"
     END
   END
 
@@ -24,4 +24,3 @@ BEGIN
 END
 
 1001 ICON "pdbg.ico"
-
