@@ -1,3 +1,10 @@
+14th November 2013
+
++ Added make.sh script to easily compile on Linux (counterpart to make.bat on Windows)
+* Changed preprocessor lines to make source cross-platform
+
+
+
 12th November 2013 (PixelDbg 0.7)
 
 + Added S3TC DXT1/3/5 interpretation (5.5.5.1 or 5.6.5 format)
